uloha 2 dataset 3 a 4 start

--- a/section_1_3.ipynb
+++ b/section_1_3.ipynb
@@ -8,12 +8,23 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- (A-4b) Sformulujte dve hypotézy o dátach v kontexte zadanej predikčnej úlohy. Formulované hypotézy overte vhodne zvolenými štatistickými testami.\n",
     "Príklad formulovania:\n",
     "android.defcontainer má v priemere vyššiu váhu v stave malware-related-activity ako v normálnom stave\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$H_0$: Android.defcontainer má v priemere vyššiu váhu v stave malware-related-activity, ako v normálnom stave\n",
+    "\n",
+    "$H_A$: Android.defcontainer má v priemere rovnakú/nižšiu váhu v stave malware-related-activity, ako v normálnom stave"
    ]
   },
   {
@@ -24,6 +35,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
