--- a/section_1_2.ipynb
+++ b/section_1_2.ipynb
@@ -1948,6 +1948,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "imei: 0 => 0.00%\n",
+      "mwra: 0 => 0.00%\n",
+      "p.android.chrome: 52 => 0.35%\n",
+      "p.android.documentsui: 12 => 0.08%\n",
+      "p.android.packageinstaller: 36 => 0.24%\n",
+      "p.android.settings: 170 => 1.14%\n",
+      "p.android.gm: 50 => 0.34%\n",
+      "p.android.externalstorage: 214 => 1.44%\n",
+      "p.system: 117 => 0.79%\n",
+      "p.android.gms: 139 => 0.93%\n",
+      "p.dogalize: 2145 => 14.41%\n",
+      "p.process.gapps: 94 => 0.63%\n",
+      "p.katana: 102 => 0.69%\n",
+      "p.google: 94 => 0.63%\n",
+      "p.notifier: 105 => 0.71%\n",
+      "p.android.defcontainer: 0 => 0.00%\n",
+      "p.android.vending: 0 => 0.00%\n",
+      "p.inputmethod.latin: 0 => 0.00%\n",
+      "p.simulator: 0 => 0.00%\n",
+      "p.olauncher: 0 => 0.00%\n",
+      "p.browser.provider: 0 => 0.00%\n",
+      "p.gms.persistent: 0 => 0.00%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# now we check outliers in the dataset\n",
+    "print_outliers_stat(data3_dupless)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
    "outputs": [
@@ -2173,7 +2212,7 @@
     }
    ],
    "source": [
-    "# we will visualize the data in histograms\n",
+    "# we will visualize the data in histograms \n",
     "show_hist(data3_dupless)"
    ]
   },
