kari je najhnusnejsia omacka na svete a bbq je najbombastickejsia vol 2

--- a/section_2.ipynb
+++ b/section_2.ipynb
@@ -1028,8 +1028,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# !!!!!! TODO !!!!!! TOTO ESTE SKONTROLOVAT A PREJST/PREPISAT\n",
-    "\n",
     "# Zdokumentovanie a Zdôvodnenie Rozhodnutí pri Transformácii Atribútov\n",
     "\n",
     "Pri transformácii dát pre strojové učenie je dôležité zabezpečiť, aby atribúty mali vhodnú škálu, boli stabilné a aby ich distribúcia vyhovovala potrebám modelov. Nižšie je uvedené zdôvodnenie zvolených techník transformácie a škálovania.\n",
@@ -1905,15 +1903,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# !!!!! TODO !!! TOTO ESTE SKONTROLOVAT ALEBO NEJAK PREPISAT VLASTNYMI SLOVAMI\n",
-    "\n",
     "# Zdokumentovanie a Zdôvodnenie Rozhodnutí pri Výbere a Zoradení Atribútov\n",
     "\n",
     "Pri výbere a zoradení atribútov sme použili rôzne metódy, aby sme zabezpečili robustnosť výsledkov a optimalizovali model pre predikciu. Nižšie sú uvedené hlavné dôvody výberu použitých techník a prístupu k zoradeniu atribútov.\n",
     "\n",
     "## 1. Kombinácia Viacerých Techník pre Výber Atribútov\n",
     "- **Dôvod**: Každá metóda výberu atribútov má svoje špecifiká a klady, a preto kombinácia viacerých techník znižuje riziko nesprávneho výberu a zvýrazňuje atribúty, ktoré sú konzistentne dôležité naprieč rôznymi metódami.\n",
-    "- **Prístup**: Použili sme korelačnú maticu, ktorá poskytuje intuitívny a rýchly prehľad o vzťahoch medzi atribútmi a cieľovou premennou. Random Forest a SelectKBest sme pridali, pretože poskytujú pokročilejšie metódy hodnotenia dôležitosti, pričom využívajú silné stránky štatistických testov a stromových algoritmov.\n",
+    "- **Prístup**: Použili sme korelačnú maticu, ktorá poskytuje rýchly prehľad o vzťahoch medzi atribútmi a cieľovou premennou. Random Forest a SelectKBest sme pridali, pretože poskytujú pokročilejšie metódy hodnotenia dôležitosti, pričom využívajú silné stránky štatistických testov a stromových algoritmov.\n",
     "\n",
     "## 2. Normalizácia a Výpočet Priemernej Dôležitosti\n",
     "- **Dôvod**: Každá metóda používa rôzne mierky dôležitosti, preto sme výsledky zjednotili cez normalizáciu, aby boli porovnateľné. Výpočet priemernej dôležitosti umožňuje kombinovať výsledky z rôznych metód do jedného koherentného skóre, čo nám dáva spoľahlivý základ na zoradenie atribútov.\n",
