--- a/section_2.ipynb
+++ b/section_2.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 280,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 281,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -943,6 +943,229 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>imei</th>\n",
+       "      <th>c.android.youtube</th>\n",
+       "      <th>c.katana</th>\n",
+       "      <th>c.dogalize</th>\n",
+       "      <th>c.android.chrome</th>\n",
+       "      <th>c.android.gm</th>\n",
+       "      <th>c.UCMobile.x86</th>\n",
+       "      <th>c.raider</th>\n",
+       "      <th>c.android.vending</th>\n",
+       "      <th>c.updateassist</th>\n",
+       "      <th>...</th>\n",
+       "      <th>p.google</th>\n",
+       "      <th>p.notifier</th>\n",
+       "      <th>p.android.defcontainer</th>\n",
+       "      <th>p.android.vending</th>\n",
+       "      <th>p.inputmethod.latin</th>\n",
+       "      <th>p.simulator</th>\n",
+       "      <th>p.olauncher</th>\n",
+       "      <th>p.browser.provider</th>\n",
+       "      <th>p.gms.persistent</th>\n",
+       "      <th>mwra</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.650993</td>\n",
+       "      <td>0.651899</td>\n",
+       "      <td>0.376176</td>\n",
+       "      <td>0.658592</td>\n",
+       "      <td>0.687489</td>\n",
+       "      <td>0.881860</td>\n",
+       "      <td>0.474326</td>\n",
+       "      <td>0.956755</td>\n",
+       "      <td>0.196370</td>\n",
+       "      <td>0.474765</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.442801</td>\n",
+       "      <td>0.422080</td>\n",
+       "      <td>0.638764</td>\n",
+       "      <td>0.395419</td>\n",
+       "      <td>0.779672</td>\n",
+       "      <td>0.542147</td>\n",
+       "      <td>0.509168</td>\n",
+       "      <td>0.897910</td>\n",
+       "      <td>0.464859</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.847389</td>\n",
+       "      <td>0.464371</td>\n",
+       "      <td>0.632965</td>\n",
+       "      <td>0.364759</td>\n",
+       "      <td>0.377840</td>\n",
+       "      <td>0.794125</td>\n",
+       "      <td>0.564916</td>\n",
+       "      <td>0.322031</td>\n",
+       "      <td>0.983932</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.305554</td>\n",
+       "      <td>0.324067</td>\n",
+       "      <td>0.946215</td>\n",
+       "      <td>0.086366</td>\n",
+       "      <td>0.569891</td>\n",
+       "      <td>0.184721</td>\n",
+       "      <td>0.637969</td>\n",
+       "      <td>0.393362</td>\n",
+       "      <td>0.744914</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.650993</td>\n",
+       "      <td>0.655191</td>\n",
+       "      <td>0.266576</td>\n",
+       "      <td>0.758676</td>\n",
+       "      <td>0.500292</td>\n",
+       "      <td>0.286033</td>\n",
+       "      <td>0.608939</td>\n",
+       "      <td>0.892521</td>\n",
+       "      <td>0.384325</td>\n",
+       "      <td>0.108470</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.649641</td>\n",
+       "      <td>0.403683</td>\n",
+       "      <td>0.419361</td>\n",
+       "      <td>0.039912</td>\n",
+       "      <td>0.477145</td>\n",
+       "      <td>0.147078</td>\n",
+       "      <td>0.887755</td>\n",
+       "      <td>0.440583</td>\n",
+       "      <td>0.724656</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.209904</td>\n",
+       "      <td>0.235979</td>\n",
+       "      <td>0.300580</td>\n",
+       "      <td>0.539772</td>\n",
+       "      <td>0.539646</td>\n",
+       "      <td>0.604442</td>\n",
+       "      <td>0.735107</td>\n",
+       "      <td>0.623787</td>\n",
+       "      <td>0.701126</td>\n",
+       "      <td>0.232309</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.697440</td>\n",
+       "      <td>0.652390</td>\n",
+       "      <td>0.679581</td>\n",
+       "      <td>0.664406</td>\n",
+       "      <td>0.625418</td>\n",
+       "      <td>0.161101</td>\n",
+       "      <td>0.349165</td>\n",
+       "      <td>0.991892</td>\n",
+       "      <td>0.376382</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.650993</td>\n",
+       "      <td>0.858240</td>\n",
+       "      <td>0.558733</td>\n",
+       "      <td>0.759773</td>\n",
+       "      <td>0.607083</td>\n",
+       "      <td>0.328518</td>\n",
+       "      <td>0.619003</td>\n",
+       "      <td>0.262323</td>\n",
+       "      <td>0.795044</td>\n",
+       "      <td>0.523092</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.597129</td>\n",
+       "      <td>0.249596</td>\n",
+       "      <td>0.980630</td>\n",
+       "      <td>0.937014</td>\n",
+       "      <td>0.661968</td>\n",
+       "      <td>0.417453</td>\n",
+       "      <td>0.616230</td>\n",
+       "      <td>0.450475</td>\n",
+       "      <td>0.529013</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 32 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       imei  c.android.youtube  c.katana  c.dogalize  c.android.chrome  \\\n",
+       "0  0.650993           0.651899  0.376176    0.658592          0.687489   \n",
+       "1  1.000000           0.847389  0.464371    0.632965          0.364759   \n",
+       "2  0.650993           0.655191  0.266576    0.758676          0.500292   \n",
+       "3  0.209904           0.235979  0.300580    0.539772          0.539646   \n",
+       "4  0.650993           0.858240  0.558733    0.759773          0.607083   \n",
+       "\n",
+       "   c.android.gm  c.UCMobile.x86  c.raider  c.android.vending  c.updateassist  \\\n",
+       "0      0.881860        0.474326  0.956755           0.196370        0.474765   \n",
+       "1      0.377840        0.794125  0.564916           0.322031        0.983932   \n",
+       "2      0.286033        0.608939  0.892521           0.384325        0.108470   \n",
+       "3      0.604442        0.735107  0.623787           0.701126        0.232309   \n",
+       "4      0.328518        0.619003  0.262323           0.795044        0.523092   \n",
+       "\n",
+       "   ...  p.google  p.notifier  p.android.defcontainer  p.android.vending  \\\n",
+       "0  ...  0.442801    0.422080                0.638764           0.395419   \n",
+       "1  ...  0.305554    0.324067                0.946215           0.086366   \n",
+       "2  ...  0.649641    0.403683                0.419361           0.039912   \n",
+       "3  ...  0.697440    0.652390                0.679581           0.664406   \n",
+       "4  ...  0.597129    0.249596                0.980630           0.937014   \n",
+       "\n",
+       "   p.inputmethod.latin  p.simulator  p.olauncher  p.browser.provider  \\\n",
+       "0             0.779672     0.542147     0.509168            0.897910   \n",
+       "1             0.569891     0.184721     0.637969            0.393362   \n",
+       "2             0.477145     0.147078     0.887755            0.440583   \n",
+       "3             0.625418     0.161101     0.349165            0.991892   \n",
+       "4             0.661968     0.417453     0.616230            0.450475   \n",
+       "\n",
+       "   p.gms.persistent  mwra  \n",
+       "0          0.464859   1.0  \n",
+       "1          0.744914   0.0  \n",
+       "2          0.724656   0.0  \n",
+       "3          0.376382   1.0  \n",
+       "4          0.529013   1.0  \n",
+       "\n",
+       "[5 rows x 32 columns]"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mp_data.head()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -952,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +1203,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 289,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1076,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1120,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -1157,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -1259,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -1301,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1326,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -1355,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -1469,7 +1692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1494,7 +1717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -1520,7 +1743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -1557,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -1602,7 +1825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -1634,7 +1857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1659,7 +1882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -1685,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -1722,7 +1945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -1767,7 +1990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -1799,7 +2022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1828,7 +2051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -1941,7 +2164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1972,7 +2195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -1997,7 +2220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -2006,7 +2229,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 314,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2035,7 +2258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -2055,18 +2278,17 @@
     }
    ],
    "source": [
-    "# využijeme sklearn pipeline na vytvorenie pipeline, ktorá bude obsahovať všetko potrebné pre preprocessing\n",
+    "#využijeme sklearn pipeline na vytvorenie pipeline, ktorá bude obsahovať všetko potrebné pre preprocessing\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
     "\n",
-    "# aby sme mohli použiť pipeline, potrebujeme vytvoriť transformers\n",
-    "\n",
+    "#aby sme mohli použiť pipeline, potrebujeme vytvoriť transformers\n",
     "class RemoveDuplicates(BaseEstimator, TransformerMixin):\n",
     "    def fit(self, X, y=None):\n",
     "        return self\n",
     "    def transform(self, X):\n",
     "        return remove_duplicates(X)\n",
-    "    \n",
+    "\n",
     "class SolveMissingValues(BaseEstimator, TransformerMixin):\n",
     "    def fit(self, X, y=None):\n",
     "        return self\n",
@@ -2082,22 +2304,22 @@
     "\n",
     "train_data = merged_train_df.select_dtypes(include=[np.number]).copy()\n",
     "\n",
-    "# vytvorenie pipeline\n",
+    "#vytvorenie pipeline\n",
     "preprocessing_pipeline = Pipeline([\n",
     "    ('remove_duplicates', RemoveDuplicates()),\n",
     "    ('solve_missing_values', SolveMissingValues()),\n",
     "    ('solve_outliers', SolveOutliers()),\n",
     "    ('transform', power_transformer),\n",
-    "    ('scale', scaler_min_max)\n",
+    "    ('scale', scaler_min_max),\n",
     "])\n",
     "\n",
-    "# spustenie pipeline na train data\n",
+    "#spustenie pipeline na train data\n",
     "preprocessed_train_data = preprocessing_pipeline.fit_transform(train_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -2106,7 +2328,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 320,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2122,7 +2344,7 @@
     }
    ],
    "source": [
-    "# zobrazenie pomocou boxplotu\n",
+    "# zobrazenie \n",
     "sns.boxplot(data=preprocessed_train_data)"
    ]
   }
@@ -2143,7 +2365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
